# intro_gpu_computing

./: CMakeLists.txt
cuda/: CMakeLists.txt  vec_add_cuda.cu
cupy/: vec_add_cupy.py
opencl/: CMakeLists.txt  vec_add_opencl.cpp
pyopencl/: vec_add_pyopencl.py
